--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                                     <div class="category">WEB DEVELOP</div>
                                 </div>
                                 <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。<br>
-                                    開發工具 : HTML, CSS, JavaScript, Laravel<br>
+                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
+                                    開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
                             <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
@@ -116,8 +116,8 @@
                                     <div class="category">WEB DEVELOP</div>
                                 </div>
                                 <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。<br>
-                                    開發工具 : HTML, CSS, JavaScript, Laravel<br>
+                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
+                                    開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
                             <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
@@ -132,8 +132,8 @@
                                     <div class="category">WEB DEVELOP</div>
                                 </div>
                                 <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。<br>
-                                    開發工具 : HTML, CSS, JavaScript, Laravel<br>
+                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
+                                    開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
                             <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
@@ -148,8 +148,8 @@
                                     <div class="category">WEB DEVELOP</div>
                                 </div>
                                 <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。<br>
-                                    開發工具 : HTML, CSS, JavaScript, Laravel<br>
+                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
+                                    開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
                             <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
