--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WangChiaHui Portfolio</title>
+    <link rel="icon" type="image/svg" href="./img/favicon-b.svg"
+        media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/svg" href="./img/favicon-w.svg"
+        media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -21,9 +25,9 @@
         </div>
         <nav></nav>
         <div class="sns-area">
-            <i class="fa-brands fa-line"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
+            <a href="https://line.me/ti/p/qKNoFhmX-j" target="_blank"><i class="fa-brands fa-line"></i></a>
+            <a href="https://www.facebook.com/wangchiahui" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/w_c_h_15/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </header>
     <main>
@@ -104,7 +108,8 @@
                                     開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
-                            <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
+                            <a href="https://www.shen57.com/" class="swiper-img"
+                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
                         </div>
@@ -120,7 +125,8 @@
                                     開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
-                            <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
+                            <a href="https://www.shen57.com/" class="swiper-img"
+                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
                         </div>
@@ -136,7 +142,8 @@
                                     開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
-                            <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
+                            <a href="https://www.shen57.com/" class="swiper-img"
+                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
                         </div>
@@ -152,7 +159,8 @@
                                     開發工具 : HTML, CSS, JavaScript, Laravel
                                 </div>
                             </div>
-                            <a href="https://www.shen57.com/" class="swiper-img" style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
+                            <a href="https://www.shen57.com/" class="swiper-img"
+                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
                         </div>
@@ -258,9 +266,9 @@
         <div class="copyright">Copyright © 2022 WangChiaHui</div>
         <div class="contact-area">
             <div class="sns-area">
-                <i class="fa-brands fa-line"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
+                <a href="https://line.me/ti/p/qKNoFhmX-j" target="_blank"><i class="fa-brands fa-line"></i></a>
+                <a href="https://www.facebook.com/wangchiahui" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/w_c_h_15/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <div class="contact-p-e-area">wangch2215@gmail.com</div>
             <div class="contact-p-e-area">+886-920-234-357</div>
