--- a/index.html
+++ b/index.html
@@ -117,15 +117,14 @@
                         <div class="swiper-slide">
                             <div class="swiper-info-box">
                                 <div class="info-title-box">
-                                    <div class="title">森五七行館形象網站</div>
-                                    <div class="category">WEB DEVELOP</div>
+                                    <div class="title">Microsoft微軟首頁仿作</div>
+                                    <div class="category">WEB PRACTISE</div>
                                 </div>
                                 <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
-                                    開發工具 : HTML, CSS, JavaScript, Laravel
+                                    前端頁面切版練習
                                 </div>
                             </div>
-                            <a href="https://www.shen57.com/" class="swiper-img"
+                            <a href="https://wangch15.github.io/microsoft-for-practise/" class="swiper-img"
                                 style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
@@ -134,15 +133,14 @@
                         <div class="swiper-slide">
                             <div class="swiper-info-box">
                                 <div class="info-title-box">
-                                    <div class="title">森五七行館形象網站</div>
-                                    <div class="category">WEB DEVELOP</div>
+                                    <div class="title">Youtube影片頁面仿切</div>
+                                    <div class="category">WEB PRACTISE</div>
                                 </div>
-                                <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
-                                    開發工具 : HTML, CSS, JavaScript, Laravel
+                                <div class="info-content"> 
+                                    前端頁面切版練習
                                 </div>
                             </div>
-                            <a href="https://www.shen57.com/" class="swiper-img"
+                            <a href="https://wangch15.github.io/Youtube-for-practise/" class="swiper-img"
                                 style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
