--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                                     <div class="category">WEB PRACTISE</div>
                                 </div>
                                 <div class="info-content">
-                                    前端頁面切版練習
+                                    前端頁面切版練習 / RWD
                                 </div>
                             </div>
                             <a href="https://wangch15.github.io/microsoft-for-practise/" class="swiper-img"
-                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
+                                style="background-image: url(./img/microsoft-mockup-samll-1@2x.png) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
                         </div>
@@ -137,31 +137,15 @@
                                     <div class="category">WEB PRACTISE</div>
                                 </div>
                                 <div class="info-content"> 
-                                    前端頁面切版練習
+                                    前端頁面切版練習 / RWD
                                 </div>
                             </div>
                             <a href="https://wangch15.github.io/Youtube-for-practise/" class="swiper-img"
-                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
+                                style="background-image: url(./img/youtube-mockup-samll-1@2x.png) ;" target="_blank">
                                 <div class="mask"></div>
                             </a>
                         </div>
 
-                        <div class="swiper-slide">
-                            <div class="swiper-info-box">
-                                <div class="info-title-box">
-                                    <div class="title">森五七行館形象網站</div>
-                                    <div class="category">WEB DEVELOP</div>
-                                </div>
-                                <div class="info-content">
-                                    UI / UX設計, 前端頁面切版, 內含最新消息新增功能。
-                                    開發工具 : HTML, CSS, JavaScript, Laravel
-                                </div>
-                            </div>
-                            <a href="https://www.shen57.com/" class="swiper-img"
-                                style="background-image: url(./img/shen57-mockup@2x.jpg) ;" target="_blank">
-                                <div class="mask"></div>
-                            </a>
-                        </div>
                         <!-- 這裡結束新增swiper內容 -->
                     </div>
                     <div class="next-prev-box">
