--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WangChiaHui Portfolio</title>
-    <link rel="icon" type="image/svg" href="./img/favicon-b.svg"
-        media="(prefers-color-scheme: light)">
-    <link rel="icon" type="image/svg" href="./img/favicon-w.svg"
-        media="(prefers-color-scheme: dark)">
+    <!-- meta -->
+    <meta property="og:url" content="https://wangch15.github.io/WCH-portfolio/">
+    <meta property="og:image" content="https://wangch15.github.io/WCH-portfolio/img/preview.png">
+    <!-- favicon -->
+    <link rel="icon" type="image/svg" href="./img/favicon-b.svg" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/svg" href="./img/favicon-w.svg" media="(prefers-color-scheme: dark)">
+    <!-- css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -136,7 +139,7 @@
                                     <div class="title">Youtube影片頁面仿切</div>
                                     <div class="category">WEB PRACTISE</div>
                                 </div>
-                                <div class="info-content"> 
+                                <div class="info-content">
                                     前端頁面切版練習 / RWD
                                 </div>
                             </div>
