--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- meta -->
     <meta property="og:url" content="https://wangch15.github.io/WCH-portfolio/">
     <meta property="og:image" content="https://wangch15.github.io/WCH-portfolio/img/preview.png">
+    <meta property="og:description" content="個人簡介 / 作品集">
+    <meta property="og:title" content="WangChiaHui Portfolio">
+    <meta name="description" content="WCH - 個人簡介 / 作品集" />
     <!-- favicon -->
     <link rel="icon" type="image/svg" href="./img/favicon-b.svg" media="(prefers-color-scheme: light)">
     <link rel="icon" type="image/svg" href="./img/favicon-w.svg" media="(prefers-color-scheme: dark)">
