--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css//swiper.css">
     <link rel="stylesheet" href="./css/index.css">
+    <style>
+        [v-cloak]{
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -103,7 +108,7 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <!-- 這裡開始新增swiper內容 -->
-                        <div class="swiper-slide" v-for="(work,index) in worksList">
+                        <div class="swiper-slide" v-for="(work,index) in worksList" v-cloak>
                             <div class="swiper-info-box">
                                 <div class="info-title-box">
                                     <div class="title">{{work.title}}</div>
@@ -153,8 +158,8 @@
 
                         <div class="skill-content" v-for="skill in skillList">
                             <div class="skill-content-top">
-                                <div class="content">{{skill.title}}</div>
-                                <div class="content">{{skill.score}}%</div>
+                                <div class="content" v-cloak>{{skill.title}}</div>
+                                <div class="content" v-cloak>{{skill.score}}%</div>
                             </div>
                             <div class="skill-content-bottom">
                                 <div class="fullbar" v-bind:style="skill.bar"></div>
