--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                         <div class="title">SKILLS</div>
                         <!-- skill bar -->
 
-                        <div class="skill-content" v-for="skill in skillList">
+                        <div class="skill-content" v-for="skill in skillList" v-cloak>
                             <div class="skill-content-top">
-                                <div class="content" v-cloak>{{skill.title}}</div>
-                                <div class="content" v-cloak>{{skill.score}}%</div>
+                                <div class="content" >{{skill.title}}</div>
+                                <div class="content" >{{skill.score}}%</div>
                             </div>
                             <div class="skill-content-bottom">
                                 <div class="fullbar" v-bind:style="skill.bar"></div>
