取消電話撥號

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="個人簡介 / 作品集">
     <meta property="og:title" content="WangChiaHui Portfolio">
     <meta name="description" content="WCH - 個人簡介 / 作品集" />
+    <meta name="format-detection" content="telephone=no">
     <!-- favicon -->
     <link rel="icon" type="image/svg" href="./img/favicon-b.svg" media="(prefers-color-scheme: light)">
     <link rel="icon" type="image/svg" href="./img/favicon-w.svg" media="(prefers-color-scheme: dark)">
